--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-
+        <script type="text/javascript" src="js/evento_index.js"></script> 
     </head>
     <body>
         <center>
@@ -14,17 +14,17 @@
         <br>
         <center>
             <form name="" action="">
-                <p class="">Login:<input type="text" name="" value=""></p><br>
-                <p class="">Senha:<input type="password" name="" value=""></p><br>
+                <p class="">Login:<input type="text" name="" value=""></p>
+                <p class="">Senha:<input type="password" name="" value="" ></p><input type="submit" value="Entrar" onclick="entrar()"><br>
             </form>
         </center>
     </body>
     <footer>
         <center>
             <h3 class="">Contato:</h3><br>
-            <a href=""><img src="imagens\logo_facebook.png"></a>
-            <a href=""><img src="imagens\logo_instagram.png"></a>
-            <a href=""><img src="imagens\logo_twitter.png"></a>
+            <a href="https://www.facebook.com/relapso.relapsus.5" target="_blank"><img src="imagens\logo_facebook.png"></a>
+            <a href="https://www.instagram.com/liderrelapsos/" target="_blank"><img src="imagens\logo_instagram.png"></a>
+            <a href="https://twitter.com/RelapsoR" target="_blank"><img src="imagens\logo_twitter.png"></a>
             <a href=""><img src="imagens\logo_whatsapp.png"></a>
             <br><br>
             <p>Endereço: Rua Relapsa número: 5</p>
