--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -14,8 +14,8 @@
         <br>
         <center>
             <form name="form" id="form" action="validaLogin.php" method="POST">
-                <p for="login" class="">Login:<input type="text" name="login" id="login"></p>
-                <p for="senha" class="">Senha:<input type="password" name="senha" id="senha"></p><input type="submit" value="Entrar" onclick="entrar()"><br>
+                <p for="login" class="">Login<input type="text" name="login" id="login"></p>
+                <p for="senha" class="">Senha<input type="password" name="senha" id="senha"></p><input type="submit" value="Entrar" onclick="entrar()"><br>
             </form>
         </center>
     </body>
