--- a/Administracao/index.html
+++ b/Administracao/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <script type="text/javascript" src="js/eventoAdministracao.js"></script>
     </head>
     <body>
         <center>
@@ -11,7 +12,7 @@
         <center>
             <form name="form" id="form" action="validaLoginAdm.php" method="POST">
                 <p for="login" class="">Admin<input type="text" name="login" id="login"></p>
-                <p for="senha" class="">Senha<input type="password" name="senha" id="senha"></p><input type="submit" value="Entrar" onclick="entrarAdm()"><br>
+                <p for="senha" class="">Senha<input type="password" name="senha" id="senha"></p><input type="submit" value="Entrar" onclick="entrarAdministracao()"><br>
             </form>
         </center>
     </body>
