--- a/Cliente/login.html
+++ b/Cliente/login.html
@@ -1,10 +1,5 @@
-<?php
-session_cache_expire(180);
-session_start();
-?>
-
-<html>
-
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Imobiliária RELAPSOS</title>
@@ -25,7 +20,7 @@ session_start();
             <li><img src="imagens\facebook.png"></li>
             <li style = "font-size: 20px;"><p>imorelapsos</p></li>
             <li style = "margin-left: 60px;"><a href = "index.html"><img src="imagens\perfil.png"></a></li>
-            <li style = "font-size: 20px;font-weight: bold;"><a href="index.html"><?php include("checkLogin.php");?></a></li>
+            <li style = "font-size: 20px;font-weight: bold;"><a href="index.html">Login</a></li>
     </ul>
     </div>
     </header>
@@ -41,9 +36,30 @@ session_start();
             </ul>
     </div>
     <hr style = "margin:1px;border: 1px solid silver">
-<div class ="img-1">
-    <img src="imagens\imagem1.png">
+    <div class="conteudo-login">
+    <center><br><br>
+<h1 style="color:white;font-family: 'Calibri';">Faça o login</h1><br>
+
+<form name="form" id="form" action="validaLogin.php" method="POST">
+<div class = "form2">
+<input type="text" name="login" id="login">
+<label for="login" class="label-name">
+    <span class = "content-name">Login</span>
+</label>
+</div>
+<div class = "form2">
+<input type="password" name="senha" id="senha">
+<label for="name" class="label-name">
+    <span class = "content-name">Senha</span>
+</label>
+        </div>
+        <input type="submit" value="Entrar" onclick="entrar()"><br>
+    </form>
+        <br><br>
+                <p style = "font-family: 'Calibri';color:white;font-size: 20px;">Ainda não tem conta nos Relapsos? Clique <a href="#" style = "font-weight: bold;color:white">aqui</a> para criar uma</p>
+                </center>
     </div>
+
 </body>
 <footer>
         <center>
@@ -61,4 +77,5 @@ session_start();
     </footer>
     
 </html>
-        
+
+
