--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -27,11 +27,9 @@
     <div class = "header-2">
             <ul>
             <li><img src="imagens\relapsoslogo.png"></li>
-            <li style = "margin-left:150px;"><a href = "index.php">HISTÓRIA</a></li>
-            <li><a href = "index.php">ALUGUEL</a></li>
-            <li><a href = "index.php">COMPRA</a></li>
-            <li><a href = "index.php">NOVOS IMÓVEIS</a></li>
-            <li><a href = "index.php">CADASTRO DE IMÓVEIS</a></li>
+            <li style = "margin-left:200px;"><a href = "index.php">HOME</a></li>
+            <li><a href = "index.php">IMÓVEIS</a></li>
+            <li><a href = "index.php">CADASTRO DE USUÁRIOS</a></li>
             <li><a href = "index.php">CONTATOS</a></li>
             </ul>
     </div>
@@ -42,17 +40,19 @@
 
 <form name="form" id="form" action="validaLogin.php" method="POST">
 <div class = "form2">
-<input type="text" name="login" id="login">
+<input type="text" name="login" id="login" autocomplete="on" required>
 <label for="login" class="label-name">
     <span class = "content-name">Login</span>
 </label>
 </div>
+<br>
 <div class = "form2">
-<input type="password" name="senha" id="senha">
+<input type="password" name="senha" id="senha" autocomplete="on" required>
 <label for="name" class="label-name">
     <span class = "content-name">Senha</span>
 </label>
         </div>
+        <br>
         <input type="submit" value="Entrar" onclick="entrar()"><br>
     </form>
         <br><br>
