--- a/Cliente/cadastroSucesso.html
+++ b/Cliente/cadastroSucesso.html
@@ -14,13 +14,13 @@
             <li><p>(11) 9 1234-5678</p></li>
             <li><img src="imagens\telefonebranco.png"></li>
             <li><p>(11) 4567-8901</p></li>
-            <li style = "margin-left: 500px;"><p>|</p></li>
+            <li style = "margin-left: 550px;"><a>|</a></li>
             <li><img src="imagens\instagram.png"></li>
             <li style = "font-size: 20px;"><p>imorelapsos</p></li>
             <li><img src="imagens\facebook.png"></li>
             <li style = "font-size: 20px;"><p>imorelapsos</p></li>
-            <li style = "margin-left: 60px;"><a href = "index.html"><img src="imagens\perfil.png"></a></li>
-            <li style = "font-size: 20px;font-weight: bold;"><a style = "color:white;text-decoration: none;" href="index.html">Login</a></li>
+            <li style = "margin-left: 60px;"><a href = "login.php"><img src="imagens\perfil.png"></a></li>
+            <li style = "font-size: 20px;font-weight: bold;"><a style = "color:white;text-decoration: none;" href="login.php">Login</a></li>
     </ul>
     </div>
     </header>
@@ -28,38 +28,17 @@
             <ul>
             <li><img src="imagens\relapsoslogo.png"></li>
             <li style = "margin-left:200px;"><a href = "index.php">HOME</a></li>
-            <li><a href = "imoveis.php">IMÓVEIS</a></li>
-            <li><a href = "cadastro_Clientes.php">CADASTRO DE USUÁRIOS</a></li>
-            <li><a href = "contatos.php">CONTATOS</a></li>
+            <li><a href = "index.php">IMÓVEIS</a></li>
+            <li><a href = "index.php">CADASTRO DE USUÁRIOS</a></li>
+            <li><a href = "index.php">CONTATOS</a></li>
             </ul>
     </div>
     <hr style = "margin:1px;border: 1px solid silver">
     <div class="conteudo-login">
     <center><br><br>
-<h1 style="color:white;font-family: 'Calibri';">Faça o login</h1><br>
-
-<form name="form" id="form" action="validaLogin.php" method="POST">
-<div class = "form2">
-<input type="text" name="login" id="login" autocomplete="on" required>
-<label for="login" class="label-name">
-    <span class = "content-name">Login</span>
-</label>
+<h1 style="color:white;font-family: 'Calibri';">Cadastro realizado com sucesso</h1><br>
+</center>
 </div>
-<br>
-<div class = "form2">
-<input type="password" name="senha" id="senha" autocomplete="on" required>
-<label for="name" class="label-name">
-    <span class = "content-name">Senha</span>
-</label>
-        </div>
-        <br>
-        <input type="submit" value="Entrar" onclick="entrar()"><br>
-    </form>
-        <br><br>
-                <p style = "font-family: 'Calibri';color:white;font-size: 20px;">Ainda não tem conta nos Relapsos? Clique <a href="cadastro_Clientes.php" style = "font-weight: bold;color:white">aqui</a> para criar uma</p>
-                </center>
-    </div>
-
 </body>
 <footer>
         <center>
