--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -14,7 +14,7 @@
             <li><p>(11) 9 1234-5678</p></li>
             <li><img src="imagens\telefonebranco.png"></li>
             <li><p>(11) 4567-8901</p></li>
-            <li style = "margin-left: 550px;"><a>|</a></li>
+            <li style = "margin-left: 500px;"><p>|</p></li>
             <li><img src="imagens\instagram.png"></li>
             <li style = "font-size: 20px;"><p>imorelapsos</p></li>
             <li><img src="imagens\facebook.png"></li>
