--- a/Administracao/index.html
+++ b/Administracao/index.html
@@ -3,18 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <script type="text/javascript" src="js/eventoAdministracao.js"></script>
+        <link rel = "stylesheet" href="css/style.css" type = "text/css">
     </head>
-    <body>
-        <center>
-            <h1>IMOBILIÁRIA RELAPSA ADMINISTRAÇÃO</h1>
-        </center>
+    <body> 
         <br>
-        <center>
+
+            <div id="corpo-form">
+            <h1>Entrar</h1>
             <form name="form" id="form" action="validaLoginAdm.php" method="POST">
-                <p for="login" class="">Admin<input type="text" name="login" id="login"></p>
-                <p for="senha" class="">Senha<input type="password" name="senha" id="senha"></p><input type="submit" value="Entrar" onclick="entrarAdministracao()"><br>
+                <input type="text" name="login" id="login" placeholder="Administrador">
+                <input type="password" name="senha" id="senha" placeholder="Senha">
+                <input type="submit" value="ACESSAR" onclick="entrarAdministracao()">
             </form>
-        </center>
+               </div>
     </body>
     <footer>
         
