--- a/Administracao/index.html
+++ b/Administracao/index.html
@@ -5,7 +5,7 @@
         <script type="text/javascript" src="js/eventoAdministracao.js"></script>
         <link rel = "stylesheet" href="css/style.css" type = "text/css">
     </head>
-    <body> 
+    <body class="doindex"> 
         <br>
 
             <div id="corpo-form">
