--- a/Administracao/principal.html
+++ b/Administracao/principal.html
@@ -43,8 +43,25 @@
             </ul>
             </nav>
         <main>
-            <h1>teste</h1>
-            <p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br><p>teste</p><Br>
+            <center><h1>Bem-Vindo Administrador!</h1><center>
+            <p class = "primeiro-parag">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nesse site é possível gerenciar várias opções sobre a imobiliária. Dentre elas estão a consulta de clientes, cadastro de clientes, cadastro de imóveis e etc. Espero que use site com sabedoria.</p>
+            <p class = "segundo-parag">O símbolo de </p><svg style="max-height: 2rem;text-align: left;" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="book-open" class="svg-inline--fa fa-book-open fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><g class ="fa-group"><path fill="currentColor" d="M542.22 32.05c-54.8 3.11-163.72 14.43-230.96 55.59-4.64 2.84-7.27 7.89-7.27 13.17v363.87c0 11.55 12.63 18.85 23.28 13.49 69.18-34.82 169.23-44.32 218.7-46.92 16.89-.89 30.02-14.43 30.02-30.66V62.75c.01-17.71-15.35-31.74-33.77-30.7zM264.73 87.64C197.5 46.48 88.58 35.17 33.78 32.05 15.36 31.01 0 45.04 0 62.75V400.6c0 16.24 13.13 29.78 30.02 30.66 49.49 2.6 149.59 12.11 218.77 46.95 10.62 5.35 23.21-1.94 23.21-13.46V100.63c0-5.29-2.62-10.14-7.27-12.99z" class="fa-primary"></path></svg>
+                <p class = "segundo-parag">é o símbolo de <b>CONSULTA</b>, aqui podemos consultar, adicionar, remover e editar os nossos clientes.</p>
+                <p class = "segundo-parag">Já o símbolo de</p>      
+                <svg style="max-height: 2rem;text-align: left;"aria-hidden="true" 
+                   focusable="false" 
+                   data-prefix="fas" 
+                   data-icon="users" 
+                   class="svg-inline--fa fa-users fa-w-20" 
+                   role="img" 
+                   xmlns="http://www.w3.org/2000/svg" 
+                   viewBox="0 0 640 512">
+                   <g class="fa-group">
+                    <path fill="currentColor" class="fa-primary" 
+                    d="M96 224c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm448 0c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm32 32h-64c-17.6 0-33.5 7.1-45.1 18.6 40.3 22.1 68.9 62 75.1 109.4h66c17.7 0 32-14.3 32-32v-32c0-35.3-28.7-64-64-64zm-256 0c61.9 0 112-50.1 112-112S381.9 32 320 32 208 82.1 208 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C179.6 288 128 339.6 128 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zm-223.7-13.4C161.5 263.1 145.6 256 128 256H64c-35.3 0-64 28.7-64 64v32c0 17.7 14.3 32 32 32h65.9c6.3-47.4 34.9-87.3 75.2-109.4z"
+                    >                      
+                    </path></svg>    
+                    <p class = "segundo-parag">é o símbolo <b>LISTA DE CLIENTES</b>, o propósitop desse símbolo apenas visualizar a lista de clientes de forma mais limpa e organizada.</p>    
 
         </main>
 
