--- a/Administracao/index.html
+++ b/Administracao/index.html
@@ -22,7 +22,7 @@
             <form name="form" id="form" action="validaLoginAdm.php" method="POST">
                 <input type="text" name="login" id="login" placeholder="Administrador">
                 <input type="password" name="senha" id="senha" placeholder="Senha">
-                <input type="submit" value="ACESSAR" onclick="entrarAdministracao()">
+                <input type="submit" value="ACESSAR">
             </form>
                </div>
     </body>
